[gd_scene load_steps=8 format=3 uid="uid://bl2barc42anjr"]

[ext_resource type="Script" path="res://Scripts/Single Elements/pressure_plate.gd" id="1_llmtp"]
[ext_resource type="Texture2D" uid="uid://cg6wipiqejrcj" path="res://Assets/Sprite/Char Andro-Sheet.png" id="2_a5v6t"]
[ext_resource type="Texture2D" uid="uid://c4tqjevd3xum0" path="res://Assets/Others/preasure.png" id="3_txmhd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ltrvk"]
atlas = ExtResource("2_a5v6t")
region = Rect2(0, 80, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6mau"]
atlas = ExtResource("2_a5v6t")
region = Rect2(60, 80, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibce6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltrvk")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6mau")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub61h"]
size = Vector2(16, 11)

[node name="pressure_plate" type="Area2D"]
z_index = 400
collision_mask = 3
script = ExtResource("1_llmtp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ibce6")
animation = &"off"
autoplay = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ub61h")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.0962047, 0.0962048, 0.0962047, 1)
position = Vector2(4.76837e-07, 0)
scale = Vector2(0.0749616, 0.0749617)
texture = ExtResource("3_txmhd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.98023e-08, 1.49012e-08)
scale = Vector2(0.0640337, 0.0640337)
texture = ExtResource("3_txmhd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
